# fs-info

./: CLAUDE.md  Cargo.toml  Containerfile  README.md  build.rs  package.toml
.github/workflows/: release.yml
proto/: info.proto
src/: alert.rs  bus_publisher.rs  cache.rs  cli.rs  cpu.rs  disk.rs  facade.rs  features.rs  grpc.rs  lib.rs  main.rs  mem.rs  metric.rs  network.rs  thermal.rs  uptime.rs
tests/: info_test.rs
