[package]
name        = "fs-info"
description = "System information service for FreeSynergy (CPU, memory, disk, services)"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-info"

[[bin]]
name = "fs-info"
path = "src/main.rs"

[features]
default = []
# Enable smartctl-based SMART disk health queries.
smart = []

[dependencies]
# FS
fs-error = { path = "../fs-libs/fs-error" }
fs-bus   = { path = "../fs-bus" }

serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
toml        = { version = "1", features = ["preserve_order"] }
tracing     = { version = "0.1" }
sysinfo     = "0.38"
tokio       = { version = "1", features = ["full"] }
async-trait = { version = "0.1" }

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
